Fix resizing of team page so profiles wrap nicely (#98)
* Fix resizing of team page so profiles wrap nicely

Changed bootstrap grid size to allow the number of profiles per row
to scale nicely based on screen width, instead of immediately changing
to only one per row - replaced md columns with sm ones

* Fix resizing for large screens

Also reorganized bootstrap layout and added "software" to list of
engineerings :)

--- a/css/team.css
+++ b/css/team.css
@@ -7,17 +7,22 @@
 }
 
 .members__info {
+	display: block;
+	float: left;
 	padding-top: 1.5rem;
 	padding-left: 1.5rem;
 	padding-right: 1rem;
 	padding-bottom: 1.5rem;
 }
 
-.box__wrapper {
-	padding-top: 5.2rem;
+.container-fluid {
+	display: block;
+	clear: both;
+	padding-top: 1rem;
 	padding-left: 2rem;
 	padding-right: 2rem;
 	padding-bottom: 1.5rem;
+	margin: 0;
 }
 
 .box__outer{
